<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_yoghurt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="selectItem"
                android:text="@string/yoghurt" />

            <Button
                android:id="@+id/button_wine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="selectItem"
                android:text="@string/wine" />

            <Button
                android:id="@+id/button_jeans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="selectItem"
                android:text="@string/jeans" />

            <Button
                android:id="@+id/button_pepper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="selectItem"
                android:text="@string/pepper" />

            <Button
                android:id="@+id/button_apples"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="selectItem"
                android:text="@string/apples" />

            <Button
                android:id="@+id/button_lemmon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="selectItem"
                android:text="@string/lemmon" />

            <Button
                android:id="@+id/button_kiwi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="selectItem"
                android:text="@string/kiwi" />

            <Button
                android:id="@+id/button_cereals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="selectItem"
                android:text="@string/cereals" />

            <Button
                android:id="@+id/button_shirt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="selectItem"
                android:text="@string/shirt" />

            <Button
                android:id="@+id/button_mushrooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="selectItem"
                android:text="@string/mushrooms" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>