<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/add_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addItem"
        android:text="@string/add_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/add_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:autofillHints="@string/enter_store"
                android:hint="@string/enter_store"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/editText_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/store" />

            <Button
                android:onClick="searchStores"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/button_find_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_store" />

            <TextView
                android:id="@+id/item1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/space"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/item2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/space"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/item3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/space"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/item4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/space"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/item5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/space"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/item6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/space"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/item7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/space"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/item8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/space"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/item9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/space"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/item10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/space"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>